--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,5 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: run action test
-        run: uv run pyscript.py 
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Install a specific version of uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        version: ">=0.4.0"
+
+    - name: Install dependencies
+      run: uv sync 
+      
+    - name: run action test
+      run: uv run pyscript.py 
