--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Trigger Action to run check update data python script
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # every 10th and 20th of each month
+    - cron: '0 22 * * *' # every 10th and 20th of each month
   workflow_dispatch:
     
 
